[gd_scene load_steps=5 format=3 uid="uid://sv01xsoa8yic"]

[ext_resource type="Script" path="res://Abilities/EarthPillarAbility/EarthPillar/EarthPillar.gd" id="1_hgei2"]
[ext_resource type="PackedScene" uid="uid://51utdinweeec" path="res://Assets/Models/Abilities/RockPillar.glb" id="2_d6ubd"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_iwthc"]
height = 0.3
radius = 1.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_v0oaq"]
height = 8.0
radius = 1.5

[node name="EarthPillar" type="Node3D"]
script = ExtResource("1_hgei2")

[node name="Pillar" type="AnimatableBody3D" parent="."]

[node name="VelocityArea" type="Area3D" parent="Pillar"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pillar/VelocityArea"]
shape = SubResource("CylinderShape3D_iwthc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pillar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, -4, 2.08165e-12)
shape = SubResource("CylinderShape3D_v0oaq")
disabled = true

[node name="RockPillar" parent="Pillar" instance=ExtResource("2_d6ubd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6, 0)

[connection signal="body_entered" from="Pillar/VelocityArea" to="." method="_on_velocity_area_body_entered"]
[connection signal="body_exited" from="Pillar/VelocityArea" to="." method="_on_velocity_area_body_exited"]
